# etf-rotation-strategy

./: .gitignore  LICENSE  PROJECT_STATUS.md  README.md  pyproject.toml
configs/: combo_wfo_config.yaml  combo_wfo_config_prefilter_test.yaml  etf_config.yaml
docs/: DATA_FORMAT_SPECIFICATION.md  PROJECT_DEEP_DIVE.md
docs/research/: tushare_integration_note.md
scripts/: update_daily_from_qmt_bridge.py  update_tushare_funddata.py
src/etf_data/: download_etf_with_custom_dates.py
src/etf_data/scripts/: download_etf_manager.py
